--- a/assets/gifFun.css
+++ b/assets/gifFun.css
@@ -2,25 +2,68 @@
     font-family: 'myFont';
     src: url('Tarantino.ttf');
 }
+body{
+    background: url(images/background.jpg);
+     background-position: center center;
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: cover;
+     height: 100%;
+}
+.row{
+    border: 10px dashed rgb(191, 20, 8);
+    box-sizing: border-box;    
+}
 #title {
     font-family: 'myFont', sans-serif;
     text-align: center;
+    margin-left: 10%;
+    color: white;
 }
 .gif{
     font-family: 'myFont', sans-serif;
     font-size: 14px;
-    color: red;
-    background-color: black;
-    border: 5px solid rgb(73, 71, 71);
+    color: rgb(255, 217, 0);
+    background-color: white;
+    margin: 5px;    
+    border-radius: 15px;
 }
 p{
     font-family: 'myFont', sans-serif;
     font-size: 14px;
     color: red;
 }
+.button-title{
+    font-family: 'myFont', sans-serif;
+    color: rgb(255, 255, 255);
+    margin: 10px 0px 10px 35px;
+}
 #gifs-appear{
-    margin-top: 20px;
+    margin-top: 8%px;    
+}
+#customBtn{
+    margin-left: 55px;
+    border-radius: 25px;
 }
 .giphy{
-    display: inline-block;
+    width: 350px;
+    height: 250px;
+    margin: 10px 10px 10px 10px;
+    border: 3px solid gray;
+}
+.gif-div{
+    display: inline-block;      
+}
+.button-form{
+    margin-left: 10px;
+}
+.input-btn{
+    color: red;
+    background-color: black;
+    border: 4px solid silver;
+    width: 120px;
+    height: 50px;
+    margin: 0px 0px 10px 80px;
+    border-radius: 25px;
+    
 }
